include/plasma_d.h

int PLASMA_dpocon(PLASMA_enum uplo, int N, double *A, int LDA, double anorm, double *rcond);
int PLASMA_dsymm(PLASMA_enum side, PLASMA_enum uplo, int M, int N, double alpha, double *A, int LDA, double *B, int LDB, double beta, double *C, int LDC);
int PLASMA_dsyrk(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, double alpha, double *A, int LDA, double beta, double *C, int LDC);
int PLASMA_dsyr2k(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, double alpha, double *A, int LDA, double *B, int LDB, double beta, double *C, int LDC);
int PLASMA_dsygvd(PLASMA_enum itype, PLASMA_enum jobz, PLASMA_enum uplo, int N, double *A, int LDA, double *B, int LDB, double *W, PLASMA_desc *descT, double *Q, int LDQ);
int PLASMA_dsytrd(PLASMA_enum jobz, PLASMA_enum uplo, int N, double *A, int LDA, double *D, double *E, PLASMA_desc *descT, double *Q, int LDQ);
int PLASMA_dlacpy(PLASMA_enum uplo, int M, int N, double *A, int LDA, double *B, int LDB);
double PLASMA_dlange(PLASMA_enum norm, int M, int N, double *A, int LDA);
double PLASMA_dlansy(PLASMA_enum norm, PLASMA_enum uplo, int N, double *A, int LDA);
double PLASMA_dlansy(PLASMA_enum norm, PLASMA_enum uplo, int N, double *A, int LDA);
double PLASMA_dlantr(PLASMA_enum norm, PLASMA_enum uplo, PLASMA_enum diag, int M, int N, double *A, int LDA);
int PLASMA_dlaset(PLASMA_enum uplo, int M, int N, double alpha, double beta, double *A, int LDA);
int PLASMA_dlaswp( int N, double *A, int LDA, int K1, int K2, const int *IPIV, int INCX);
int PLASMA_dlaswpc(int N, double *A, int LDA, int K1, int K2, const int *IPIV, int INCX);
int PLASMA_dlauum(PLASMA_enum uplo, int N, double *A, int LDA);
int PLASMA_dplgsy( double bump, int N, double *A, int LDA, unsigned long long int seed);
int PLASMA_dplgsy( double bump, int N, double *A, int LDA, unsigned long long int seed);
int PLASMA_dplrnt( int M, int N, double *A, int LDA, unsigned long long int seed);
int PLASMA_dpltmg( PLASMA_enum mtxtype, int M, int N, double *A, int LDA, unsigned long long int seed);
int PLASMA_dsymm(PLASMA_enum side, PLASMA_enum uplo, int M, int N, double alpha, double *A, int LDA, double *B, int LDB, double beta, double *C, int LDC);
int PLASMA_dsyrk(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, double alpha, double *A, int LDA, double beta, double *C, int LDC);
int PLASMA_dsyr2k(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, double alpha, double *A, int LDA, double *B, int LDB, double beta, double *C, int LDC);