control/plasma_df90.F90


      interface
         function PLASMA_dsygvd_c(itype,jobz,uplo,N,A,LDA,B,LDB,W,descT,Q,LDQ) &
          & bind(c, name='PLASMA_dsygvd')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsygvd_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            type(c_ptr), value :: W
            type(c_ptr), value :: descT
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_dsygvd_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dsymm_c(side,uplo,M,N,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='PLASMA_dsymm')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsymm_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_dsymm_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dsyr2k_c(uplo,trans,N,K,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='PLASMA_dsyr2k')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsyr2k_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_dsyr2k_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dsyrk_c(uplo,trans,N,K,alpha,A,LDA,beta,C,LDC) &
          & bind(c, name='PLASMA_dsyrk')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsyrk_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_dsyrk_c
      end interface
#endif

      interface
         function PLASMA_dsytrd_c(jobz,uplo,N,A,LDA,D,E,descT,Q,LDQ) &
          & bind(c, name='PLASMA_dsytrd')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsytrd_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: descT
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_dsytrd_c
      end interface

      interface
         function PLASMA_dlacpy_c(uplo,M,N,A,LDA,B,LDB) &
          & bind(c, name='PLASMA_dlacpy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlacpy_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function PLASMA_dlacpy_c
      end interface

      interface
         function PLASMA_dlange_c(norm,M,N,A,LDA) &
          & bind(c, name='PLASMA_dlange')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlange_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_dlange_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dlansy_c(norm,uplo,N,A,LDA) &
          & bind(c, name='PLASMA_dlansy')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlansy_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_dlansy_c
      end interface
#endif

      interface
         function PLASMA_dlansy_c(norm,uplo,N,A,LDA) &
          & bind(c, name='PLASMA_dlansy')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlansy_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_dlansy_c
      end interface

      interface
         function PLASMA_dlantr_c(norm,uplo,diag,M,N,A,LDA) &
          & bind(c, name='PLASMA_dlantr')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlantr_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_dlantr_c
      end interface

      interface
         function PLASMA_dlaset_c(uplo,M,N,alpha,beta,A,LDA) &
          & bind(c, name='PLASMA_dlaset')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlaset_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            real(kind=c_double), value :: alpha
            real(kind=c_double), value :: beta
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_dlaset_c
      end interface

      interface
         function PLASMA_dlaswp_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_dlaswp')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlaswp_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_dlaswp_c
      end interface

      interface
         function PLASMA_dlaswpc_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_dlaswpc')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlaswpc_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_dlaswpc_c
      end interface

      interface
         function PLASMA_dlauum_c(uplo,N,A,LDA) &
          & bind(c, name='PLASMA_dlauum')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlauum_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_dlauum_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dplgsy_c(bump,N,A,LDA,seed) &
          & bind(c, name='PLASMA_dplgsy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dplgsy_c
            real(kind=c_double), value :: bump
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dplgsy_c
      end interface
#endif

      interface
         function PLASMA_dplgsy_c(bump,N,A,LDA,seed) &
          & bind(c, name='PLASMA_dplgsy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dplgsy_c
            real(kind=c_double), value :: bump
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dplgsy_c
      end interface

      interface
         function PLASMA_dplrnt_c(M,N,A,LDA,seed) &
          & bind(c, name='PLASMA_dplrnt')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dplrnt_c
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dplrnt_c
      end interface

      interface
         function PLASMA_dpltmg_c(mtxtype,M,N,A,LDA,seed) &
          & bind(c, name='PLASMA_dpltmg')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dpltmg_c
            integer(kind=c_int), value :: mtxtype
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dpltmg_c
      end interface

      interface
         function PLASMA_dpocon_c(uplo,N,A,LDA,anorm,rcond) &
          & bind(c, name='PLASMA_dpocon')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dpocon_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            real(kind=c_double), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_dpocon_c
      end interface
